@@ -327,6 +327,15 @@ name|CORE_NODE_NAME
 init|=
 literal|"coreNodeName"
 decl_stmt|;
+DECL|field|SOLR_CORE_PROP_PREFIX
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|SOLR_CORE_PROP_PREFIX
+init|=
+literal|"solr.core."
+decl_stmt|;
 DECL|field|DEFAULT_EXTERNAL_PROPERTIES_FILE
 specifier|public
 specifier|static
@@ -934,7 +943,7 @@ argument_list|)
 condition|)
 name|propName
 operator|=
-literal|"solr.core."
+name|SOLR_CORE_PROP_PREFIX
 operator|+
 name|propName
 expr_stmt|;
@@ -1117,66 +1126,90 @@ name|coreContainer
 expr_stmt|;
 name|this
 operator|.
-name|originalExtraProperties
-operator|.
-name|putAll
-argument_list|(
-name|other
-operator|.
-name|originalExtraProperties
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|originalCoreProperties
-operator|.
-name|putAll
-argument_list|(
-name|other
-operator|.
-name|originalCoreProperties
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|coreProperties
-operator|.
-name|putAll
-argument_list|(
-name|other
-operator|.
-name|coreProperties
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|coreProperties
-operator|.
-name|setProperty
-argument_list|(
-name|CORE_NAME
-argument_list|,
-name|coreName
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|originalCoreProperties
-operator|.
-name|setProperty
-argument_list|(
-name|CORE_NAME
-argument_list|,
-name|coreName
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
 name|cloudDesc
 operator|=
 name|other
 operator|.
 name|cloudDesc
+expr_stmt|;
+name|this
+operator|.
+name|originalExtraProperties
+operator|.
+name|putAll
+argument_list|(
+name|other
+operator|.
+name|originalExtraProperties
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|originalCoreProperties
+operator|.
+name|putAll
+argument_list|(
+name|other
+operator|.
+name|originalCoreProperties
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|coreProperties
+operator|.
+name|putAll
+argument_list|(
+name|other
+operator|.
+name|coreProperties
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|substitutableProperties
+operator|.
+name|putAll
+argument_list|(
+name|other
+operator|.
+name|substitutableProperties
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|coreProperties
+operator|.
+name|setProperty
+argument_list|(
+name|CORE_NAME
+argument_list|,
+name|coreName
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|originalCoreProperties
+operator|.
+name|setProperty
+argument_list|(
+name|CORE_NAME
+argument_list|,
+name|coreName
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|substitutableProperties
+operator|.
+name|setProperty
+argument_list|(
+name|SOLR_CORE_PROP_PREFIX
+operator|+
+name|CORE_NAME
+argument_list|,
+name|coreName
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|getPropertiesName
